--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -25,7 +25,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.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 }}
       with:
         tag_name: ${{ github.sha }}
         release_name: Release ${{ github.sha }}
