--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -1,13 +1,45 @@
-steps:
-  - uses: actions/checkout@v3
+name: Auto Publicar Commit
+on:
+  push:
+    branches:
+      - main
 
-  # create a Zip package from files in the "reports" folder; create package in "packaging" folder
-  - name: Create a Zip package 🐙
-    uses: OctopusDeploy/create-zip-package-action@v3
-    with:
-      package_id: 'DemoPackage'
-      version: '1.0.0'
-      output_folder: './packaging'
-      base_path: reports
-      files: |
-        **/*.*
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout del repositorio
+      uses: actions/checkout@v2
+
+    - name: Crear archivo ZIP
+      run: |
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
+        COMMIT_SHA=$(git rev-parse --short HEAD)
+        FILENAME="SOMEDATACOMPS-$COMMIT_SHA.zip"
+        zip -r "$FILENAME" .
+        echo "::set-output name=zip-file::$FILENAME"
+
+    - name: Crear lanzamiento de GitHub
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.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 }}
+      with:
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        body: |
+          Release ${{ github.sha }}
+        draft: false
+        prerelease: false
+
+    - name: Subir archivo ZIP
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.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 }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ${{ steps.build.outputs.zip-file }}
+        asset_name: SOMEDATACOMPS.zip
+        asset_content_type: application/zip
