--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -1,4 +1,4 @@
-name: Comprimir archivos en zip y publicar release
+name: Publicar lanzamiento
 
 on:
   push:
@@ -18,11 +18,33 @@ jobs:
       with:
         args: zip -qq -r SOMEDATACOMPATS.zip ./data ./pack.mcmeta
 
-    - name: Publicar release
-      uses: softprops/action-gh-release@v1
+    - name: Crear lanzamiento
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.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 }}
       with:
-        files: SOMEDATACOMPATS.zip
         tag_name: v1.0.0
-        name: Release v1.0.0
-        body: Descripción del release.
+        release_name: Release v1.0.0
         draft: false
+        prerelease: false
+
+    - name: Cargar archivo adjunto al lanzamiento
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1.0.2
+      env:
+        GITHUB_TOKEN: ${{ secrets.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 }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./SOMEDATACOMPATS.zip
+        asset_name: SOMEDATACOMPATS.zip
+        asset_content_type: application/zip
+
+    - name: Publicar lanzamiento
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.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 }}
+      with:
+        tag_name: v1.0.0
+        release_name: Release v1.0.0
+        body: Descripción del release.
