--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -22,7 +22,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1.0.0
       env:
-        github-token: ${{ secrets.API_TOKEN }}
+        API_TOKEN: ${{ secrets.API_TOKEN }}
       with:
         tag_name: v1.0.0
         release_name: Release v1.0.0
@@ -33,7 +33,7 @@ jobs:
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1.0.0
       env:
-        github-token: ${{ secrets.API_TOKEN }}
+        API_TOKEN: ${{ secrets.API_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./SOMEDATACOMPATS.zip
@@ -43,7 +43,7 @@ jobs:
     - name: Publicar lanzamiento
       uses: softprops/action-gh-release@v1
       env:
-        github-token: ${{ secrets.API_TOKEN }}
+        API_TOKEN: ${{ secrets.API_TOKEN }}
       with:
         tag_name: v1.0.0
         release_name: Release v1.0.0
