--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -22,7 +22,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1.0.0
       env:
-        API_TOKEN: ${{ secrets.API_TOKEN }}
+        github_token: ${{ secrets.API_TOKEN }}
       with:
         tag_name: v1.0.0
         release_name: Release v1.0.0
@@ -31,9 +31,9 @@ jobs:
 
     - name: Cargar archivo adjunto al lanzamiento
       id: upload-release-asset 
-      uses: actions/upload-release-asset@v1.0.0
+      uses: actions/upload-release-asset@v1.0.2
       env:
-        API_TOKEN: ${{ secrets.API_TOKEN }}
+        github_token: ${{ secrets.API_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./SOMEDATACOMPATS.zip
@@ -43,7 +43,7 @@ jobs:
     - name: Publicar lanzamiento
       uses: softprops/action-gh-release@v1
       env:
-        API_TOKEN: ${{ secrets.API_TOKEN }}
+        github_token: ${{ secrets.API_TOKEN }}
       with:
         tag_name: v1.0.0
         release_name: Release v1.0.0
