--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -1,19 +1,30 @@
-name: GitHub Actions Secret Example
+name: Publicar lanzamiento
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  secrets-in-github-actions:
-    runs-on: windows-latest
+  build:
+    runs-on: ubuntu-latest
 
-    # The Secrect Actions GitHub example has three steps
     steps:
-      # Show how to print unmasked GitHub secrets to the console
-      - name: Step 1 - Echo out a GitHub Actions Secret to the logs
-        run: |
-          echo "The GitHub Action Secret will be masked:  "
-          echo ${{ secrets.API_TOKEN }}
-          echo "Trick to echo GitHub Actions Secret:  "
-          echo ${{secrets.API_TOKEN}} | sed 's/./& /g' 
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Comprimir archivos en zip
+      uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r SOMEDATACOMPATS.zip ./data ./pack.mcmeta
+
+    - name: Crear lanzamiento
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        github_token: ${{ secrets.API_TOKEN }}
+      with:
+        tag_name: v1.0.0
+        release_name: Release v1.0.0
+        draft: false
+        prerelease: false
