--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -1,30 +1,34 @@
-name: Publicar lanzamiento
+name: Publicar automáticamente ZIP al confirmar
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]  # Solo se activa al enviar a la rama "main"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build_and_publish:
+    runs-on: ubuntu-latest  # Se ejecuta en un runner Ubuntu reciente
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3  # Obtiene el código del repositorio
 
-    - name: Comprimir archivos en zip
-      uses: montudor/action-zip@v1
-      with:
-        args: zip -qq -r SOMEDATACOMPATS.zip ./data ./pack.mcmeta
+      - name: Instalar herramienta de creación de ZIP (si es necesario)
+        run: sudo apt-get update && sudo apt-get install -y zip  # Instala "zip" si no está disponible
 
-    - name: Crear lanzamiento
-      id: create_release
-      uses: actions/create-release@v1.0.0
-      env:
-        github_token: ${{ secrets.API_TOKEN }}
-      with: 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
-        tag_name: v1.0.0
-        release_name: Release v1.0.0
-        draft: false
-        prerelease: false
+      - name: Crear archivo ZIP
+        run: zip -qr ${{ github.sha }}.zip ./data ./pack.mcmeta  # Usa el SHA de la confirmación para un nombre único
+
+      - uses: actions/upload-artifact@v2  # Sube el artefacto ZIP
+        with:
+          name: ${{ github.sha }}.zip  # Coincide con el nombre del archivo ZIP
+          path: ${{ github.sha }}.zip  # Especifica la ruta del archivo
+
+      - uses: actions/create-release@v1  # Crea una versión (opcional)
+        env:
+          GITHUB_TOKEN: ${{ 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 }}
+        with:
+          tag_name: ${{ github.sha }}  # Usa el SHA de la confirmación para la versión (opcional)
+          release_name: "Versión ${{ github.sha }}"  # Nombre descriptivo de la versión (opcional)
+          draft: false  # Publicar una versión no provisional (opcional)
+          prerelease: false  # No es una versión preliminar (opcional)
+
+
