--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -24,7 +24,7 @@ jobs:
 
       - uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.xtQ5I68mlibgYD6WHBFBQjdniLsPyP4S5DQS }}
+          GITHUB_TOKEN: ${{ secrets.API_TOKEN2 }}
         with:
           tag_name: ${{ github.sha }}
           release_name: "Versión ${{ github.sha }}"
