--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -33,6 +33,6 @@ jobs:
           body: |
             **Descripción de la release:**
 
-            - Cambios en esta versión...
+            - Cambios en esta version...
             - ...
 
