--- a/.github/workflows/autopublicar.yml
+++ b/.github/workflows/autopublicar.yml
@@ -1,38 +1,50 @@
 name: Mi flujo de trabajo
 
 on:
-  push:
-    branches: [ main ]
+ push:
+  branches: [ main ]
 
 jobs:
-  build_and_publish:
-    runs-on: ubuntu-latest
+ build_and_publish:
+  runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
+  steps:
+  - uses: actions/checkout@v3
 
-      - name: Construir proyecto (reemplazar con su comando específico)
-        run: ./build.sh
+  # Add step to copy build.sh if needed (assuming it's in a different location)
+  # - name: Copy build script (if needed)
+  #   run: |
+  #     cp path/to/build.sh .
 
-      - name: Crear archivo ZIP (reemplazar con su comando específico)
-        run: zip -qr ${{ github.sha }}.zip ./dist
+  - name: Set execute permissions (if needed)
+    run: |
+      chmod +x build.sh
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.sha }}.zip
-          path: ${{ github.sha }}.zip
+  - uses: actions/setup-node@v3
+    with:
+      node-version: 'node-20'
 
-      - uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.API_TOKEN2 }}
-        with:
-          tag_name: ${{ github.sha }}
-          release_name: "Versión ${{ github.sha }}"
-          draft: false
-          prerelease: false
-          body: |
-            **Descripción de la release:**
+  - name: Construir proyecto
+    run: ./build.sh
 
-            - Cambios en esta version...
-            - ...
+  - name: Crear archivo ZIP
+    run: zip -qr ${{ github.sha }}.zip ./dist
 
+  - uses: actions/upload-artifact@v3
+    with:
+      name: ${{ github.sha }}.zip
+      path: ${{ github.sha }}.zip
+
+  - uses: actions/create-release@v1
+    env:
+      GITHUB_TOKEN: ${{ secrets.API_TOKEN2 }}
+    with:
+      tag_name: ${{ github.sha }}
+      release_name: "Versión ${{ github.sha }}"
+      draft: false
+      prerelease: false
+      body: |
+        **Descripción de la release:**
+
+        - Cambios en esta versión...
+        - ...
